@@ -1,16 +1,14 @@
 // Test for C++20 [[likely]] and [[unlikely]] attributes.
 // C++20: Assume support.
 
-int main(int argc, char **)
-{
-#if __cplusplus < 202002L
-  deliberately_fail(because, older, C++, standard);
+#if !__has_cpp_attribute(likely)
+#  error "No support for [[likely]] / [[unlikely]] attributes."
 #endif
 
-  int x = 0;
-  if (argc == 1) [[likely]]
-    x = 0;
+int foo(int i)
+{
+  if (i > 0) [[likely]]
+    return 100;
   else
-    x = 1;
-  return x;
+    return 0;
 }
