@@ -2,6 +2,8 @@
  - Fix string conversion buffer budget for arrays containing nulls. (#921)
  - Remove `-fanalyzer` option again; gcc is still broken.
  - Oops, no, minimum CMake version is not 3.28, but 3.12!
+ - Fix buffer overrun in converting array with nulls to string. (#922)
+ - Fix warnings on compilers that accept `[[assume]]` with a warning. (#928)
 7.10.0
  - Deprecate `errorhandler`; replace with lambda-friendly "notice handlers."
  - Deprecate `notification_receiver`; replace with "notification handlers"
